--- a/projeto4-relatorios/nbproject/project.properties
+++ b/projeto4-relatorios/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=projeto4-relatorios
-main.class=view.TelaCliente
+main.class=view.TelaLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
