--- a/projeto4-relatorios/nbproject/project.properties
+++ b/projeto4-relatorios/nbproject/project.properties
@@ -35,16 +35,52 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/projeto4-relatorios
 endorsed.classpath=
 excludes=
+file.reference.bcprov-jdk15on-1.68.jar=lib/bcprov-jdk15on-1.68.jar
+file.reference.castor-core-1.4.1.jar=lib/castor-core-1.4.1.jar
+file.reference.castor-xml-1.4.1.jar=lib/castor-xml-1.4.1.jar
+file.reference.commons-beanutils-1.9.4.jar=lib/commons-beanutils-1.9.4.jar
+file.reference.commons-collections-3.2.2.jar=lib/commons-collections-3.2.2.jar
+file.reference.commons-collections4-4.2.jar=lib/commons-collections4-4.2.jar
+file.reference.commons-digester-2.1.jar=lib/commons-digester-2.1.jar
+file.reference.commons-lang3-3.4.jar=lib/commons-lang3-3.4.jar
+file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
+file.reference.ecj-3.21.0.jar=lib/ecj-3.21.0.jar
+file.reference.itext-2.1.7.js9.jar=lib/itext-2.1.7.js9.jar
+file.reference.jackson-annotations-2.12.2.jar=lib/jackson-annotations-2.12.2.jar
+file.reference.jackson-core-2.12.2.jar=lib/jackson-core-2.12.2.jar
+file.reference.jackson-databind-2.12.2.jar=lib/jackson-databind-2.12.2.jar
+file.reference.jasperreports-6.18.1.jar=lib/jasperreports-6.18.1.jar
+file.reference.javax.inject-1.jar=lib/javax.inject-1.jar
+file.reference.jcommon-1.0.23.jar=lib/jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=lib/jfreechart-1.0.19.jar
 file.reference.mysql-connector-java-8.0.27.jar=lib/mysql-connector-java-8.0.27/mysql-connector-java-8.0.27.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.bcprov-jdk15on-1.68.jar}:\
+    ${file.reference.castor-core-1.4.1.jar}:\
+    ${file.reference.castor-xml-1.4.1.jar}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-collections-3.2.2.jar}:\
+    ${file.reference.commons-collections4-4.2.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-lang3-3.4.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.ecj-3.21.0.jar}:\
+    ${file.reference.itext-2.1.7.js9.jar}:\
+    ${file.reference.jackson-annotations-2.12.2.jar}:\
+    ${file.reference.jackson-core-2.12.2.jar}:\
+    ${file.reference.jackson-databind-2.12.2.jar}:\
+    ${file.reference.jasperreports-6.18.1.jar}:\
+    ${file.reference.javax.inject-1.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.mysql-connector-java-8.0.27.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=\
-    ${file.reference.mysql-connector-java-8.0.27.jar}
+javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
